prevent overflow in code boxes

--- a/documentation/source/_themes/fontPartsTheme/static/fontparts.css
+++ b/documentation/source/_themes/fontPartsTheme/static/fontparts.css
@@ -209,6 +209,7 @@ a.headerlink:visited {
 }
 .highlight pre {
   border-radius: 0.5rem;
+  overflow: auto;
 }
 
 h1:hover > a.headerlink,
