--- a/documentation/source/_themes/fontPartsTheme/static/sass_partials/elements.sass
+++ b/documentation/source/_themes/fontPartsTheme/static/sass_partials/elements.sass
@@ -173,6 +173,7 @@ a.headerlink:visited
 
 	pre
 		border-radius: $rounded-corner-1
+		overflow: auto
 		
 h1:hover > a.headerlink,
 h2:hover > a.headerlink,
